# aws-form-mailer

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/models/: mod.rs  stock_model.rs
templates/: base.html.tera  home.html.tera  stock.html.tera
