
[package]
name = "impro_stock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenv = { version = "0.15.0" }
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }